# browser-use

test_agent/: agent_runner.py  config.py  function_registry.py  pyproject.toml  register_custom_actions.py  requirements.txt  test_cursor_access.py  test_runner.py  view.py
test_agent/Claude/: README.md  batch_test_runner_claude.py  quick_click_test.py  test_runner_claude.py
test_agent/Claude/docs/: AKAMAI_BYPASS_GUIDE.md  ANTI_BOT_SOLUTIONS.md  ARCHITECTURE.md  CLAUDE_SUCCESS.md  CLAUDE_USAGE.md  ENHANCED_CLICK.md  NIKE_AUTOFILL_SOLUTION.md  PROXY_BUG_FIX.md  PROXY_POOL_USAGE.md  QUICK_START_CLAUDE.md  USER_DATA_DIR_SOLUTION.md  WHY_GPT4O_FAILS.md
test_agent/Claude/integration/: free_proxy_pool.py  litellm_patch.py  llm_anthropic.py  llm_config.py  strip_patch.py
test_agent/custom_actions/: cdp_click.py  os_click.py  uia_click.py
test_agent/docs/: RDP_Session_Management.md
test_agent/test_case/checkout/: nike.test.json
test_agent/test_script/: test_cdp_attach_checkout.py  test_cdp_click.py  test_cdp_click_with_tscon.py  test_checkout_popup_loop.py  test_os_click.py  test_uia_continuous.py  tscon_with_allow.ps1
test_agent/uia_helper/: cdp_checkout_monitor.py  log_file_monitor.py  test_client_continuous.py  test_uia_click.py  uia_server.py
test_agent/utils/: browser_focus_manager.py  log_helper.py  screenshot_helper.py  tscon_helper.ps1  tscon_helper.py  tscon_worker.ps1  uia_helper.py  windows_helper.py
